[package]
name = "logic"
version = "0.1.0"
authors = ["Anton <antonoutkine@gmail.com>", "Noah <33094578+coolreader18@users.noreply.github.com>"]
edition = "2018"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rand = { version = "0.7", features = ["wasm-bindgen"] }
multimap = "0.8"
strum = { version = "0.18", features = ["derive"] }
